# KKV_DEV_ENV

./: .vimrc  README.md  profile
C/IPC/fifo/: Makefile
C/dynamic_lib/: Makefile
C/dynamic_lib/src/: lib_mylib.c  main.c
C/linker_loader/: a.c  a.out  m.c  test.c
C/sizecheck/: size_check  size_check.c
C/socket/src/: a.out  client  client.c  server  server.c  server_main.c
C/static_lib/: Makefile
C/static_lib/src/: lib_mylib.c  lib_mylib.h  main.c
GO/: helloworld  helloworld.go  helloworld2  helloworld2.go
ansible/: ansible_hosts  ansible_hosts.yaml  play_shutdown.yaml  play_test_task.yaml
config/: env_python  profile  vimrc
lib/python_libs/: utils-1.0.0-py3-none-any.whl
proj_notif/inbound/: FINAL_FROM_DF_100.csv
proj_notif/src/: api_caller.py  api_consumer.py  api_expose.py  api_publisher.py  consumer.py  consumer_api.py  o.api_expose.py  producer.py  secret.key
python_code/rabbitmq/: receive.py  receive2.py  send.py
python_code/rabbitmq/notif/: receive_all.py  receiver.py  send.py
python_code/rabbitmq/topic/: receiver.py
python_code/rest/: api_create.py
python_code/rest_factorial/: a.py  factorial_c.py
python_code/util/: setup.py
python_code/util/utils/: decrypt.py
python_code/util/utils.egg-info/: PKG-INFO
sandbox/C/dynamic_lib/: Makefile
sandbox/GO/: a.txt
sandbox/jenkins/: sample_jenkins_pipeline.xml
sandbox/sql_lite/: 1  Foreign_Exchange_Rates.csv
sql_lite/: test.db
src/Python/decrypt/: setup.cfg
src/Python/decrypt/src/: __init__.py  decrypt.py
src/Python/decrypt/src/Decrypt.egg-info/: PKG-INFO  SOURCES.txt
(+63 files in other folders)
