[metadata]
name = Decrypt
version = 1.0.0
author = KKV
author_email = author@example.com
description = Decrypt utility using python crypto package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kuldkkv/KKV_DEV_ENV
project_urls =
    Bug Tracker = https://github.com/kuldkkv/KKV_DEV_ENV
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
